# samsung_kernel_a325f

./: Makefile  README  README.md  README_Kernel.txt  build_kernel.sh  test.config  test.config.old
Documentation/admin-guide/: kernel-parameters.txt
block/: genhd.c  ioctl.c
crypto/: tcrypt_procfs.c
drivers/: Kconfig  Makefile
drivers/android/: binder.c  binder_alloc.c
drivers/ata/: libata-core.c  libata-eh.c  libata-scsi.c
drivers/block/: loop.c
drivers/char/: random.c
drivers/extcon/: Kconfig
drivers/hid/: hid-core.c  hid-ids.h
drivers/input/: input.c
drivers/md/: dm-core.h  dm-table.c  dm-verity-target.c
drivers/mfd/: Kconfig
drivers/misc/mediatek/gpu/gpu_mali/mali_bifrost/mali-r51p0/drivers/base/base/: BUILD.bazel
drivers/net/: tun.c  vxlan.c
drivers/regulator/: core.c
drivers/spi/: spi-mt65xx.c  spi.c
firmware/tsp_ilitek/: ili7806s_a32x.hex  ili9881x_a03core.hex  ili9881x_a03core_boe.hex  ili9881x_a03core_tianma.hex  ili9881x_a32x.hex  ili9882q_a02_boe.hex
fs/: dcache.c  exec.c  namespace.c  open.c  read_write.c
fs/ecryptfs/: keystore.c
fs/ext4/: ext4.h  ioctl.c  mballoc.c  namei.c  super.c  xattr.c
fs/f2fs/: dir.c  namei.c  segment.c  super.c
fs/fuse/: dir.c  fuse_i.h  inode.c
fs/incfs/: vfs.c
fs/nilfs2/: gcinode.c  segment.c
fs/proc/: task_mmu.c
fs/pstore/: ram_core.c
include/drm/: drm_mipi_dsi.h
include/linux/: blkdev.h  bpf.h  fs.h  libata.h  netdevice.h  security.h  skbuff.h
init/: version.c
kernel/: audit.c  exit.c  sysctl.c  workqueue.c
lib/: Makefile  random32.c  stackdepot.c  win_minmax.c
mm/: memcontrol.c  memory.c  page_alloc.c  vmscan.c
net/: socket.c
security/: security.c
(+122 files in other folders)
